<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:id="@+id/layout_id"
    android:layout_height="match_parent">


    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <RelativeLayout
            android:layout_width="match_parent"
            android:padding="25dp"
            android:layout_height="match_parent">
            <TextView
                android:layout_width="wrap_content"
                android:id="@+id/tile"
                android:textSize="18sp"
                android:textStyle="bold"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:text="@string/enter_item"/>
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/tile"
                android:layout_marginTop="10dp"
                android:hint="@string/hint_name"
                android:id="@+id/groceryitem"/>
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/groceryitem"
                android:layout_marginTop="15dp"
                android:hint="@string/hint_qty"
                android:id="@+id/groceryquantity"/>
            <Button
                android:layout_below="@+id/groceryquantity"
                android:id="@+id/saveButton_id"
                android:text="@string/save_title"
                android:background="@color/colorAccent"
                android:textStyle="bold"
                android:layout_marginTop="10dp"
                android:layout_centerHorizontal="true"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>


        </RelativeLayout>
    </androidx.cardview.widget.CardView>

</LinearLayout>